Updated the homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/SustainabilityCell-IITB/ISR",
+  "homepage": "https://SustainabilityCell-IITB/github.io/ISR",
   "name": "isr-sustainabilitycell",
   "private": true,
   "version": "0.0.0",
